<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/lMarginDefault"
        android:contentDescription="@string/scrollCondiciones"
        app:layout_constraintBottom_toTopOf="@+id/chBox_AceptarTerminos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tV_Condiciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_textScrollView" />
        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/chBox_AceptarTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:minHeight="@dimen/minHeight_Fix"
        android:text="@string/chBox_AceptacionTerminos"
        app:layout_constraintBottom_toTopOf="@id/bt_Cancelar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_Cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_style"
        android:text="@string/bt_Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>